@@ -116,6 +116,8 @@ makEXT(NS_NET)
 makEXT(NS_PID)
 makEXT(NS_USER)
 makEXT(NS_UTS)
+makEXT(OOM_ADJ)
+makEXT(OOM_SCORE)
 makEXT(PRIORITY)
 makEXT(PRIORITY_RT)
 makEXT(PROCESSOR)
