@@ -103,6 +103,8 @@ makREL(NS_NET)
 makREL(NS_PID)
 makREL(NS_USER)
 makREL(NS_UTS)
+makREL(OOM_ADJ)
+makREL(OOM_SCORE)
 makREL(PRIORITY)
 makREL(PRIORITY_RT)
 makREL(PROCESSOR)
