@@ -2,6 +2,7 @@ procps-ng-NEXT
 ---------------
   * Rename pwait to pidwait
   * library: renamed to libproc-2 and reset to 0:0:0
+  * ps: Add OOM and OOMADJ fields                          issue #198
 
 procps-ng-3.3.17
 ---------------
